use-cases/nic-examples/ingress-resources/auth-basic/cafe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-auth-ingress
  annotations:
    nginx.org/basic-auth-secret: "cafe-passwd"
    nginx.org/basic-auth-realm: "Cafe App"
spec:
  ingressClassName: nginx-plus
  tls:
  - hosts:
    - cafe.f5k8s.net
  rules:
  - host: cafe.f5k8s.net
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
