use-cases/nic-examples/ingress-resources/auth-basic/tea-minion.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress-tea-minion
  annotations:
#    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/basic-auth-secret: "tea-passwd"
    nginx.org/basic-auth-realm: "Tea"    
spec:
  ingressClassName: nginx-plus
  rules:
  - host: cafe.f5k8s.net
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
